<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="16dp">
        <Button android:id="@+id/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" />
        <TextView android:id="@+id/date" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="24dp" android:textSize="24sp" android:textStyle="bold" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="24dp" android:text="@string/empty_day" android:textSize="18sp" />
        <Button android:id="@+id/write" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="24dp" android:text="@string/write_day" />
    </LinearLayout>
</ScrollView>
